--- a/.gitignore
+++ b/.gitignore
@@ -41,5 +41,7 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# Custom files and/or folders
 *.sublime-workspace
 *.sublime-project
